@@ -1,5 +1,6 @@
 Version 0.3.3.9 2008-
 ---------------
++ Sparc compatibility
 x MacOS X wchar_t stuff
 
 Version 0.3.3.8 2008-08-22
